Added move_right css class, minor page number changes made

--- a/templates/FAQ.html
+++ b/templates/FAQ.html
@@ -3,6 +3,7 @@
 {% block title %}FAQ - YouTalkEdu{% endblock title %}
 
 {% block content %}
+	<div class="move_right">
 	<h1>FAQ</h1>
 
 
@@ -83,4 +84,5 @@
 		</p>
 
 	</ul>
+	</div>
 {% endblock content %}
