--- a/templates/home.html
+++ b/templates/home.html
@@ -16,5 +16,7 @@
 		</p>
 	</div>
 
-	<p>Questions? Check out the <a href="{% url 'faq' %}">FAQ</a></p>
+	<div class="move_right">
+		<p>Questions? Check out the <a href="{% url 'faq' %}">FAQ</a></p>
+	</div>
 {% endblock content %}
