--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -3,6 +3,7 @@
 {% block title %}Password change - YouTalkEdu{% endblock title %}
 
 {% block content %}
+	<div class="move_right">
 	<script type="text/javascript">
 		$(document).ready(function() {
 			window.onload = function() {
@@ -35,4 +36,5 @@
 			</tr>
 		</table>
 	</form>
+	</div>
 {% endblock content %}
