--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -5,6 +5,7 @@
 {% block title %}Reset Password - YouTalkEdu{% endblock title %}
 
 {% block content %}
+	<div class="move_right">
 	<script type="text/javascript">
 		$(document).ready(function() {
 			window.onload = function() {
@@ -23,4 +24,5 @@
 			<input type="submit" name="reset_pass_submit" value="Reset password" />
 		</p>
 	</form>
+	</div>
 {% endblock content %}
