--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -3,6 +3,7 @@
 {% block title %}Register - YouTalkEdu{% endblock title %}
 
 {% block content %}
+	<div class="move_right">
 	<script type="text/javascript">
 		$(document).ready(function() {
 			window.onload = function() {
@@ -33,5 +34,6 @@
 
 		<input type="submit" name="create" value="Create" />
 	</form>
+	</div>
 {% endblock content %}
 
