--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <head>
 	{% block stylesheets %}
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="{% static 'css/base.css' %}" rel="stylesheet">
 		<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"  media="screen">
 {#		<link href="{% static 'css/bootstrap-responsive.min.css' %}" rel="stylesheet" media="screen"> #}
 	{% endblock stylesheets %}
