--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -3,6 +3,7 @@
 {% block title %}Search - YouTalkEdu{% endblock title %}
 
 {% block content %}
+	<div class="move_right">
 	{# Focus on search on load #}
 	<script type="text/javascript">
 		$(document).ready(function() {
@@ -12,37 +13,36 @@
 		}); 
         </script> 
 
-    <form method="get" action=".">
-        <table>
-            {{ form.as_table }}
-            <tr>
-                <td>&nbsp;</td>
-                <td>
-                    <input type="submit" value="Search">
-                </td>
-            </tr>
-        </table>
+	<form method="get" action=".">
+		<table>
+		{{ form.as_table }}
+			<tr>
+				<td>&nbsp;</td>
+				<td><input type="submit" value="Search"></td>
+			</tr>
+		</table>
 
-        {% if query %}
-            <h3>Results</h3>
+	{% if query %}
+		<h3>Results</h3>
 
-            {% for result in page.object_list %}
-                <p>
-                    <a href="{{ result.object.get_absolute_url }}">{{ result.object.title }}</a>
-                </p>
-            {% empty %}
-                <p>No results found.</p>
-            {% endfor %}
+		{% for result in page.object_list %}
+			<p>
+				<a href="{{ result.object.get_absolute_url }}">{{ result.object.title }}</a>
+			</p>
+		{% empty %}
+			<p>No results found.</p>
+		{% endfor %}
 
-            {% if page.has_previous or page.has_next %}
-                <div>
-                    {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
+		{% if page.has_previous or page.has_next %}
+			<div>
+			{% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
                     |
-                    {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
-                </div>
-            {% endif %}
-        {% else %}
-            {# Show some example queries to run, maybe query syntax, something else? #}
-        {% endif %}
-    </form>
+			{% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
+			</div>
+		{% endif %}
+	{% else %}
+		{# Show some example queries to run, maybe query syntax, something else? #}
+	{% endif %}
+	</form>
+	</div>
 {% endblock %}
