Fixed bad errors in password forms, tested them as well

--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -18,7 +18,12 @@
 
 	<form action="" method="post">
 		{% csrf_token %}
-		{{ form.email.errors }}
+		{% if form.errors %}
+			<div class="alert alert-error">
+				<button type="button" class="close" data-dismiss="alert">×</button>
+				{{ form.email.errors }}
+			</div>
+		{% endif %}
 		<p>
 			<label for="id_email">E-mail address:</label> {{ form.email }} 
 			<input type="submit" name="reset_pass_submit" value="Reset password" />
