--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -14,20 +14,29 @@
 
 	<form action="" method="post">
 		{% csrf_token %}
+		{% if form.errors %}
+			<div class="alert alert-error">
+				<button type="button" class="close" data-dismiss="alert">×</button>
+				{{ form.non_field_errors }} {# If pass fields don't match #}
+				{% for field in form %} 
+					{% if field.errors %}
+						<li>{{ field.errors|striptags }}</li>
+					{% endif %}
+				{% endfor %}
+			</div>
+		{% endif %}
+
 		<table>
 			<tr>
-				<td>{{ form.old_password.errors }}
-				<label for="id_old_password">Old password:</label></td>
+				<td><label for="id_old_password">Old password:</label></td>
 				<td>{{ form.old_password }}</td>
 			</tr>			
 			<tr>
-				<td>{{ form.new_password1.errors }}
-				<label for="id_new_password1">New password:</label></td>
+				<td><label for="id_new_password1">New password:</label></td>
 				<td>{{ form.new_password1 }}</td>
 			</tr>
 			<tr>
-				<td>{{ form.new_password2.errors }}
-				<label for="id_new_password2">Confirm password:</label></td>
+				<td><label for="id_new_password2">Confirm password:</label></td>
 				<td>{{ form.new_password2 }}</td>
 			</tr>
 			<tr>
