--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -41,7 +41,7 @@
 			</tr>
 			<tr>
 				<td></td>
-				<td><input type="submit" name="pass_change_submit" value="Change my password" /></td>
+				<td><button class="btn btn-primary" type="submit" name="pass_change_submit">Change my password</button></td>
 			</tr>
 		</table>
 	</form>
