--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -32,7 +32,7 @@
 			</div>
 		{% endfor %}
 
-		<input type="submit" name="create" value="Create" />
+		<button class="btn btn-primary" type="submit" name="create">Create Account</button>
 	</form>
 	</div>
 {% endblock content %}
