--- a/templates/user_type_change_form.html
+++ b/templates/user_type_change_form.html
@@ -14,7 +14,7 @@
 			</tr>
 			<tr>
 				<td></td>
-				<td><button name="user_type_change_button" type="submit">Change</button></td>	
+				<td><button class="btn btn-primary" name="user_type_change_button" type="submit">Change</button></td>	
 			</tr>
 		</table>
 	</form>
