--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -26,7 +26,7 @@
 		{% endif %}
 		<p>
 			<label for="id_email">E-mail address:</label> {{ form.email }} 
-			<input type="submit" name="reset_pass_submit" value="Reset password" />
+			<button class="btn btn-primary" type="submit" name="reset_pass_submit">Reset password</button>
 		</p>
 	</form>
 	</div>
