--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -18,7 +18,7 @@
 		{{ form.as_table }}
 			<tr>
 				<td>&nbsp;</td>
-				<td><input type="submit" value="Search"></td>
+				<td><button class="btn btn-primary" type="submit">Search</button></td>
 			</tr>
 		</table>
 
