--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
 					<li><a href="{% url 'user_page' user=user %}">{{ user.username }}</a></li>
 					<li><a name="logout_nav" href="{% url 'auth_logout' %}">Logout</a></li>
 				{% else %}
-					<li class="pull-right"><a name="login_nav" href="{% url 'login' %}">Login</a></li>
+					<li class="pull-right"><a name="login_nav" href="{% url 'login' %}?next={{request.path}}">Login</a></li>
 				{% endif %}
 			</ul>
 		</div>
