--- a/templates/post_page.html
+++ b/templates/post_page.html
@@ -56,29 +56,91 @@
 	</div>
 	</div>
 
-	{# COMMENTS #}
-	{% if commentForm.errors %}
-		<div class="alert alert-error">
-			<button type="button" class="close" data-dismiss="alert">×</button>
-			{% for field in commentForm %} 
-				{% if field.errors %}
-					<li>{{ field.errors|striptags }}</li>
-				{% endif %}
-			{% endfor %}
-		</div>
-	{% endif %}
-	<form method="POST" action="{% url 'new_comment' post.id %}?next={{request.path}}">
-		{% csrf_token %}
-		{% render_honeypot_field %}
-		{# Would use form.as.p but want special error display above #}
-		{% for field in commentForm %}
-			<div class="fieldWrapper">
-				{{ field.label_tag }} {{ field }}
-			</div>
-		{% endfor %}
-		<button class="btn btn-success" name="post_button" type="submit">Comment</button>	
-	</form>
-	{% for com in comments %}
-		<p>{{ com.comment }}</p>
-	{% endfor %}
+	<a href={% url 'new_comment' %}>CLICK ME!</a>
+
+
+
+
+
+
+	{# Comments #}
+    <script>
+        $(document).ready(function(){
+            $("#commenters").on("click", ".reply", function(event){
+                event.preventDefault(); //Prevent reloading page
+                var form = $("#postcomment").clone(true); //Clone comment box
+                form.find('.parent').val($(this).parent().parent().attr('id'));
+                $(this).parent().append(form);
+            });
+        });
+    </script>
+    <style>
+        a {
+            font-weight: bold;
+            color: #ff982c;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+        
+        #commenters {
+            padding-left: 0px;
+        }
+        
+            #commenters li {
+                list-style-type: none;
+            }
+        
+        .poster {
+            font-size: 12px;
+            color: #AAAAAA;
+        }
+        
+        #postcomment ul {
+            padding-left: 0px;
+        }
+        
+            #postcomment ul li {
+                list-style-type: none;
+                padding-bottom: 5px;
+            }
+                
+        #postcomment label {
+            width: 74px;
+            display: inline-block;
+        }
+        
+        .c {
+            font-size: 14px;
+            background: #0E0E0E;
+            -webkit-border-radius: 10px;
+            -moz-border-radius: 10px;
+            border-radius: 10px;
+            color: #FFFFFF;
+            padding: 10px;
+            margin-bottom: 10px;
+        }
+    </style>
+    <h1>Comments Tutorial by Max Burstein</h1>
+    <form id="postcomment" method="post" action="">
+        {{comment_form.as_p}}
+        <p><input type="submit" value="Submit" /></p>
+        {% csrf_token %}
+    </form>
+    <ul id="commenters">
+    {% for c in comment_tree %}
+        <li id="{{c.id}}" class="c" style="margin-left:{{c.depth|add:c.depth}}em;">
+            <p class="poster">Anonymous - {{c.time_created}}</p>
+            <p>{{c.content}}</p>
+            <p><a href="" class="reply">reply</a></p>
+        </li>
+    {% empty %}
+        <li>There are currently no comments. You can be first!</li>
+    {% endfor %}
+    </ul>
+</body>
+</html>
+
 {% endblock content %}
