--- a/templates/post_page.html
+++ b/templates/post_page.html
@@ -54,35 +54,28 @@
 				{% endif %}	
 			{% endif %}
 	</div>
-	</div>
-
-	<a href={% url 'new_comment' %}>CLICK ME!</a>
-
-
 
 
 
 
 	{# Comments #}
-    <script>
-        $(document).ready(function(){
-            $("#commenters").on("click", ".reply", function(event){
-                event.preventDefault(); //Prevent reloading page
-                var form = $("#postcomment").clone(true); //Clone comment box
-                form.find('.parent').val($(this).parent().parent().attr('id'));
-                $(this).parent().append(form);
-            });
-        });
-    </script>
+	<br/><br/>
+	<h3>Comments</h3>
+	<script>
+		$(document).ready(function(){
+			$("#commenters").on("click", ".reply", function(event){
+				event.preventDefault(); //Prevent reloading page
+				var form = $("#postcomment").clone(true); //Clone comment box
+				form.find('.parent').val($(this).parent().parent().attr('id'));
+				$(this).parent().append(form);
+			});
+		});
+	</script>
     <style>
-        a {
+        ul p a {
             font-weight: bold;
             color: #ff982c;
             text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
         }
         
         #commenters {
@@ -123,24 +116,45 @@
             margin-bottom: 10px;
         }
     </style>
-    <h1>Comments Tutorial by Max Burstein</h1>
-    <form id="postcomment" method="post" action="">
-        {{comment_form.as_p}}
-        <p><input type="submit" value="Submit" /></p>
-        {% csrf_token %}
-    </form>
-    <ul id="commenters">
-    {% for c in comment_tree %}
-        <li id="{{c.id}}" class="c" style="margin-left:{{c.depth|add:c.depth}}em;">
-            <p class="poster">Anonymous - {{c.time_created}}</p>
-            <p>{{c.content}}</p>
-            <p><a href="" class="reply">reply</a></p>
-        </li>
-    {% empty %}
-        <li>There are currently no comments. You can be first!</li>
-    {% endfor %}
-    </ul>
-</body>
-</html>
 
+	{% if comment_form.errors %}
+		<div class="alert alert-error">
+		<button type="button" class="close" data-dismiss="alert">×</button>
+		{% for field in comment_form %} 
+			{% if field.errors %}
+				<li>{{ field.errors|striptags }}</li>
+			{% endif %}
+		{% endfor %}
+		</div>
+	{% endif %}
+	<form id="postcomment" method="POST" action="{% url 'new_comment' post.id %}?next={{request.path}}">
+		{% csrf_token %}
+		{% render_honeypot_field %}
+		<div class="fieldWrapper">
+			{{ comment_form.content.label_tag }} {{ comment_form.content }}
+			{{ comment_form.parent }}			
+		</div>
+		<button class="btn btn-success" name="comment_button" type="submit">Comment</button>	
+	</form>
+	</div>
+	
+	<ul id="commenters">
+		{% for c in comment_tree %}
+			<li id="{{c.id}}" class="c" style="margin-left:{{c.depth|add:c.depth}}em;">
+			<p class="poster"><a href="{% url 'user_page' user=c.user_id %}">{{c.user_id}}</a> - {{c.time_created}}</p>
+			<p>{{c.content}}</p>
+			{% if user.is_authenticated %}		
+				<p>
+					<a href="" class="reply">Reply</a>
+					{% if c.user_id == request.user %}
+						<a href="{% url 'delete_comment' c.id %}?next={{request.path}}"
+						onclick="return confirm('Are you sure you want to delete your comment?')">Delete</a>
+					{% endif %}
+				</p>
+			{% endif %}
+			</li>
+		{% empty %}
+			<li>There are currently no comments. You can be first!</li>
+		{% endfor %}
+	</ul>
 {% endblock content %}
