Vote added to comments, logic still needed to draw

--- a/templates/base_post.html
+++ b/templates/base_post.html
@@ -94,8 +94,8 @@
 		<div style="clear:both; margin-bottom:20px; border:2px solid black; width:800px">
 		{# Vote display #}
 		<div style="display:inline-block; width:150px">  
-			<canvas id="myCanvas{{post.id}}" width="150" height="100">
-         		   If you see this, your browser does not support HTML5 Canvas.
+			<canvas id="myCanvas{{post.id}}" width="125" height="100">
+         		   If you see this, your browser does not support HTML5 Canvas. Sorry :(
         		</canvas>
 			<script	src="{% static 'js/vote_script.js' %}"></script>
 			<script type="text/javascript">
