--- a/templates/base_post.html
+++ b/templates/base_post.html
@@ -67,6 +67,7 @@
 	
 
 	{# Sort by links #}
+	{% if posts %}
 	<div class="btn-group">
 		<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">
 			Sort by:
@@ -86,6 +87,7 @@
 			{% endfor %}	
 		</ul>
 	</div>
+	{% endif %}
 
 
 	{# POSTS DISPLAY #}
@@ -124,7 +126,7 @@
 				<span style="color:{{user_color_dict|get_item:u_type}}; float:right; font-weight:bold">{{ post.user_id.get_user_type_display }}</span>
 				{% endwith %}
 			</p>
-			<a href="{% url 'post_page' post_id=post.id %}"><h4 style="word-wrap:break-word; height:60px">{{ post.title }}</h4></a>
+			<a href="{% url 'post_page' post_id=post.id %}"><h4 style="word-wrap:break-word; height:60px">{{ post.title|capfirst }}</h4></a>
 			<p>
 				{% for user_type_key in user_color_dict %}
 					{{ user_type_key }}:		
