--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -13,21 +13,50 @@
 	<h4> Overall user rating: {{ user_object.vote_percentage }}</h4>
 	<p>Last logged in on {{ user_object.last_login.date }} at {{ user_object.last_login.time }}</p>
 
+	{# Posts #}
 	<br/>
 	{% if user_object == request.user %}
-		<h4>Here are your posts:</h4>
+		<h4>Here are your 10 most recent posts:</h4>
 	{% else %}
-		<h4>Here are the posts for {{ user_object.username }}:</h4>
+		<h4>Here are the 10 most recent posts for {{ user_object.username }}:</h4>
 	{% endif %}
 	{% for post in user_posts %}
 		<p>
-			<span style="float:left">{{ forloop.counter }}: &nbsp;</span>
-			<a href="{% url 'post_page' post_id=post.id %}" style="float:left; display:inline-block; width:400px; text-overflow:ellipsis; overflow: hidden">{{ post.title }}</a>.
-			<span style="float:left">Overall rating: {{ post.vote_percentage }} 
+			<div style="float:left; display:inline-block; width:500px; text-overflow:ellipsis; overflow:hidden; white-space: nowrap">
+				{{ forloop.counter }}: &nbsp; <a href="{% url 'post_page' post_id=post.id %}">{{ post.title }}</a>
+			</div>&nbsp;
+			<span style="float:left">
+				&nbsp; &nbsp; Overall rating: {{ post.vote_percentage }} 
 				({{ post.total_votes }} vote{{ post.total_votes|pluralize }})
 			</span>
 		</p>
 	{% endfor %}
+
+	{# Comments #}
+	<br/>
+	{% if user_object == request.user %}
+		<h4>Here are your 10 most recent comments:</h4>
+	{% else %}
+		<h4>Here are the 10 most recent comments for {{ user_object.username }}:</h4>
+	{% endif %}
+	{% for comment in user_comments %}
+		<p>
+			<div style="float:left; display:inline-block; width:500px; text-overflow:ellipsis; overflow:hidden; white-space: nowrap">
+				{{ forloop.counter }}: {{ comment.content }}
+			</div>&nbsp;
+{% comment %}
+			<span style="float:left">			
+				&nbsp; &nbsp; Overall rating: {{ comment.vote_percentage }} 
+				({{ comment.total_votes }} vote{{ comment.total_votes|pluralize }})
+			</span>
+{% endcomment %}
+			<span style="float:left">
+				&nbsp; &nbsp; on post: &nbsp; <a href="{% url 'post_page' comment.post_id.id %}" style="display:inline-block; width:300px">{{ comment.post_id.title|truncatechars:20 }}</a>
+			</span>
+
+		</p>
+	{% endfor %}
+
 	<br/><br/>
 	</div>
 {% endblock content %}
